S1-06 feat(contracts): add the prop models of the UI kit to OpenAPI (#12)
* docs(core): bump core to v6


* feat(contracts): add the prop models of the UI kit to OpenAPI


---------
